# Musicosa-AutoTools

./: LICENSE  README.md
Musicosa Runner/: .env.example  .gitignore  README.md  config.toml  config.toml.example  musicosa.config.toml  musicosa.config.toml.example  musicosa.py  pipeline.py  pyproject.toml  requirements.txt
Musicosa Runner/award_forms/: angers-award.csv  atrezzo-rosso.csv  caught-in-4k.csv  comedy-bender.csv  el-killer-no-tu-abuela.csv  el-souls-de-los-premios.csv  half-lifent-3.csv  hans-williams.csv  im-just-ken.csv  juego-mas-original.csv  lisan-al-gaib-lag.csv  lore-per-favore.csv  metapremio.csv  mini-lisan-al-gaib-mini-lag.csv  mini-lisan-al-gaib.csv  mujercalculos.csv  mundo-1-1.csv  musica-momento.csv  now-that-is-drama.csv  now-thats-drama.csv  odisea-virtual.csv  ojo-llameante-de-mordor.csv  oscar.csv  pixel-perfect.csv  plot-twist-el-videojuego.csv  roster-of-the-obra-dinn.csv  silksont.csv  spawny.csv  susto-menor.csv  the-poet-and-the-muse.csv  threshold-kids.csv  what-is-that-melody.csv
Musicosa Runner/common/: constants.py  identifiers.py  models.py  settings.py  time_utils.py  type_definitions.py
Musicosa Runner/contestant_forms/: Ana - Modelo de participante - Musicosa 5 Edición.xlsx  Ana - Modelo de participante - Musicosa 8 Edición.xlsx  Arancha - Modelo de participante - Musicosa 5 Edición.xlsx  Bea - Modelo de participante - Musicosa 5 Edición.xlsx  Carmen - Modelo de participante - Musicosa 5 Edición.xlsx  Carmen - Modelo de participante - Musicosa 8 Edición.xlsx  Caster - Modelo de participante - Musicosa 5 Edición.xlsx  (+13 more)
(+313 files in other folders)
